--- a/app/src/main/res/layout/bottom_sheet_dialog_options.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_options.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:weightSum="3"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <TextView
+    <ImageView
         android:id="@+id/rename_text_view"
-        android:drawableStart="@drawable/edit"
-        android:drawablePadding="24dp"
-        android:padding="20dp"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/rename"/>
+        android:layout_weight="1"
+        android:background="@drawable/button_border"
+        android:contentDescription="@string/rename"
+        android:padding="20dp"
+        android:src="@drawable/edit" />
 
-    <TextView
+    <ImageView
         android:id="@+id/delete_text_view"
-        android:drawableStart="@drawable/delete_forever"
-        android:drawablePadding="24dp"
-        android:padding="20dp"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/delete"/>
+        android:layout_weight="1"
+        android:background="@drawable/button_border"
+        android:contentDescription="@string/delete"
+        android:padding="20dp"
+        android:src="@drawable/delete_forever" />
 
-    <TextView
+    <ImageView
         android:id="@+id/share_text_view"
-        android:drawableStart="@drawable/share"
-        android:drawablePadding="24dp"
-        android:padding="20dp"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/share"/>
+        android:layout_weight="1"
+        android:background="@drawable/button_border"
+        android:contentDescription="@string/share"
+        android:padding="20dp"
+        android:src="@drawable/share" />
 
 </LinearLayout>
